
#ADD_EXECUTABLE(testConfig testConfig.cpp)
#ADD_EXECUTABLE(testMemoryUsage testMemoryUsage.cpp) 

#TARGET_LINK_LIBRARIES(testConfig libnice_core_basics libnice_core_vector)
#TARGET_LINK_LIBRARIES(testMemoryUsage libnice_core_basics libnice_core_vector)

#INSTALL(TARGETS testConfig DESTINATION bin)
#INSTALL(TARGETS testMemoryUsage DESTINATION bin)
