set(core_optimization_gradientBased_src FirstOrderRasmussen.cpp
FirstOrderTrustRegion.cpp
OptimizationAlgorithmFirst.cpp
OptimizationAlgorithmSecond.cpp
OptimizationProblemFirst.cpp
OptimizationProblemSecond.cpp
SecondOrderTrustRegion.cpp
TrustRegionBase.cpp
)

ADD_LIBRARY(core_optimization_gradientBased ${NICE_BUILD_LIBS_STATIC_SHARED} ${core_optimization_gradientBased_src})

INSTALL(TARGETS core_optimization_gradientBased DESTINATION libs)
